--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=crud_project_review
 
 # Database Configuration
-spring.datasource.url = jdbc:mysql://localhost:3301/crud_mysql?useSSL=false&serverTimeZone=UTC
+spring.datasource.url = jdbc:mysql://localhost:3301/crud_mysql?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=password
 
@@ -14,3 +14,5 @@ spring.jpa.properties.hibernate.format_sql=true
 # Optional: Pretty print JSON responses
 spring.jackson.serialization.indent-output=true
 
+fiction2st.openapi.dev-url=http://localhost:8080
+fiction2st.openapi.prod-url=https://fiction-api.com
