--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,20 @@ spring.jpa.properties.hibernate.format_sql=true
 # Optional: Pretty print JSON responses
 spring.jackson.serialization.indent-output=true
 
+#Mail Property
+spring.mail.host = smtp.gmail.com
+spring.mail.port = 587
+spring.mail.username=fakerfan90
+spring.mail.password=ofdafxfmgsjsyyjz
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#thymeleaf
+spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+
 fiction2st.openapi.dev-url=http://localhost:8080
 fiction2st.openapi.prod-url=https://fiction-api.com
